@@ -11,3 +11,4 @@ i386-pc-mingw32			gcc 2.95.3-6	0.0.3	ok, cross compiled
 i386-unknown-freebsd4.10	gcc 2.95.4	0.0.3	ok
 sparc-sun-solaris2.9		gcc 2.95.3	0.0.2	ok
 powerpc-apple-darwin7.4.0	gcc 3.3		0.0.2	ok
+powerpc-apple-darwin7.5.0	gcc 3.3		0.0.3	ok
