@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: states.cpp,v 1.1 2004/09/13 21:14:26 ela Exp $
+ * $Id: states.cpp,v 1.2 2004/09/22 16:47:57 ela Exp $
  *
  */
 
@@ -123,4 +123,11 @@ template <class state_type_t>
 void states<state_type_t>::fillState (int state, state_type_t val) {
   state_type_t * p = &stateval[state << STATE_SHIFT];
   for (int i = 0; i < STATE_NUM; i++) *p++ = val;
+}
+
+/* This function stores the values of the given state into the given
+   pointer location. */
+template <class state_type_t>
+void states<state_type_t>::saveState (int state, state_type_t * values) {
+  for (int i = 0; i < STATE_NUM; i++) values[i] = getState (state, i);
 }
