@@ -1,3 +1,8 @@
+2004-09-22  Stefan Jahn  <stefan@lkcc.org>
+
+	* technical.tex (subsection{Stability considerations}):
+	Finished section about stability of integration methods.
+
 2004-09-20  Stefan Jahn  <stefan@lkcc.org>
 
 	* technical.tex (subsection{Stability considerations}): Checked
